resources/hive-integration/unleash/ocm.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: ocm-integration
  name: ocm-integration
spec:
  host: ocm-integration.unleash.devshift.net
  to:
    kind: Service
    name: ocm-integration
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
